Changed CSS selectors and added notes to HTML

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,25 +8,25 @@ body {
     background-color: #d9dcd6;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
 /* end of header */
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header nav {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -34,11 +34,11 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -55,6 +55,7 @@ body {
 }
 
 /* end of main img */ 
+
 
 a {
     color: #ffffff;
@@ -75,7 +76,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+article {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -137,7 +138,7 @@ p {
 
 /* end of article */
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
